# fastapi-mvc-loguru

./: CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: integration.yml  main.yml
charts/novaapi/: Chart.yaml  README.md  values.yaml
charts/novaapi/templates/: NOTES.txt  _helpers.tpl  configmap.yml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/novaapi/templates/tests/: test-connection.yaml
das_sankhya/: __init__.py  version.py  wsgi.py  wsgi_gunicorn.py  wsgi_uvicorn.py
das_sankhya/app/: asgi.py
das_sankhya/app/controllers/api/v1/: ready.py
das_sankhya/app/middlewares/: correlation_id.py  idempotency_key.py  request_id.py  timing.py
das_sankhya/cli/: cli.py
das_sankhya/cli/commands/: devserve.py  serve.py
das_sankhya/config/: application.py  gunicorn.conf.py  router.py
das_sankhya/core/: gunicorn_logs.py  logs.py  logs2.py  logs3.py
das_sankhya/middlewares/asgi_correlation_id/: __init__.py  context.py  log_filters.py  middleware.py
das_sankhya/utils/: aiohttp_client.py  json.py  redis.py
locust/: test1.py
tests/integration/: test_ready_endpoint.py
tests/unit/: test_wsgi.py
tests/unit/app/: conftest.py  test_asgi.py
tests/unit/app/controllers/api/v1/: test_ready.py
tests/unit/app/exceptions/: test_http.py
tests/unit/app/models/: test_ready.py  test_response.py
tests/unit/app/utils/: test_aiohttp_client.py  test_redis.py
tests/unit/cli/: test_cli.py
tests/unit/cli/commands/: test_serve.py
