[tool.poetry]
name = "das_sankhya"
version = "0.1.0"
description = "This project was generated with fastapi-mvc."
authors = ["abnerjacobsen <abner@apoana.com.br>"]
license = "MIT"
readme = "README.md"
repository = "https://your.repo.url.here"
classifiers = [
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "~0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.1"}
gunicorn = "~20.1.0"
click = "~7.1.2"
aioredis = "~2.0.0"
aiohttp = "~3.8.0"
loguru = "^0.6.0"
pendulum = "^2.1.2"
pytz = "^2021.3"
orjson = "^3.6.6"
cuid = "^0.3"
starlette-context = "^0.3.3"
setproctitle = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "~6.2.4"
pytest-cov = "~2.12.0"
pytest-asyncio = "~0.15.1"
requests = "~2.25.1"
aioresponses = "~0.7.2"
mock = "~4.0.3"
flake8 = "~3.9.2"
flake8-docstrings = "~1.6.0"
flake8-import-order = "~0.18.1"
flake8-todo = "^0.7"
black = "^21.12b0"
locust = "^2.7.0"
watchdogs = "^1.8.6"
watchdog = "^2.1.6"

[tool.poetry.scripts]
das_sankhya = 'das_sankhya.cli.cli:cli'
das_sankhyadev = 'das_sankhya.wsgi_uvicorn:run_dev_wsgi'

[tool.poetry.urls]
"Issues" = "https://your.repo.url.here/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
